--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,13 @@
+
 .main{
+  display: flex;
+  justify-content: center;
+}
+.v-box{
+  display: flex;
+  flex-direction: column;
+}
+.title{
   display: flex;
   justify-content: center;
 }
@@ -8,5 +17,15 @@
   height: 500px;
   background-color: red;
   display: flex;
-  justify-content: center;
+  background-color: red;
+  justify-content: space-evenly;
+}
+
+.image-box img{
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
+.title{
+  background-color: blue;
 }
