--- a/Kyoshi/kyoshi-styles.css
+++ b/Kyoshi/kyoshi-styles.css
@@ -2,3 +2,7 @@
   display: flex;
   justify-content: center;
 }
+body{
+  background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+  background-attachment: fixed;
+}
